--- a/Web.config
+++ b/Web.config
@@ -26,7 +26,7 @@
     </pages>
   </system.web>
   <connectionStrings>
-    <add name="TurerEntities" connectionString="metadata=res://*/App_Code.Work.csdl|res://*/App_Code.Work.ssdl|res://*/App_Code.Work.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\Turer.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="TurerEntities" connectionString="metadata=res://*/App_Code.Work.csdl|res://*/App_Code.Work.ssdl|res://*/App_Code.Work.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\v11.0;attachdbfilename=|DataDirectory|\SJ.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
